--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Happy 6 Months, My Love!</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="google-adsense-account" content="ca-pub-1805511202107925">
 </head>
 <body>
   <div class="container">
